--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,21 @@ Test/parseIdx.txt
 Test/parseIfo.txt
 parseIdx.txt
 parseIfo.txt
+stardict-ER-LingvoUniversal-2.4.2/ER-LingvoUniversal.dict
+stardict-ER-LingvoUniversal-2.4.2/ER-LingvoUniversal.idx
+stardict-ER-LingvoUniversal-2.4.2/ER-LingvoUniversal.ifo
+stardict-lingvo-ER-Biology-2.4.2/ER-Biology.dict
+stardict-lingvo-ER-Biology-2.4.2/ER-Biology.idx
+stardict-lingvo-ER-Biology-2.4.2/ER-Biology.ifo
+stardict-lingvo-ER-Computer-2.4.2/ER-Computer.idx
+stardict-lingvo-ER-Computer-2.4.2/ER-Computer.ifo
+stardict-lingvo-ER-Computer-2.4.2/ER-LingvoComputer.dict
+stardict-lingvo-ER-Informal-2.4.2/ER-Informal.dict
+stardict-lingvo-ER-Informal-2.4.2/ER-Informal.idx
+stardict-lingvo-ER-Informal-2.4.2/ER-Informal.ifo
+stardict-lingvo-ER-Medical-2.4.2/ER-Medical.dict
+stardict-lingvo-ER-Medical-2.4.2/ER-Medical.idx
+stardict-lingvo-ER-Medical-2.4.2/ER-Medical.ifo
+stardict-lingvo-ER-Polytechnical-2.4.2/ER-Polytechnical.dict
+stardict-lingvo-ER-Polytechnical-2.4.2/ER-Polytechnical.idx
+stardict-lingvo-ER-Polytechnical-2.4.2/ER-Polytechnical.ifo
