установка имён файлов словарей

--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ stardict-lingvo-ER-Medical-2.4.2/ER-Medical.ifo
 stardict-lingvo-ER-Polytechnical-2.4.2/ER-Polytechnical.dict
 stardict-lingvo-ER-Polytechnical-2.4.2/ER-Polytechnical.idx
 stardict-lingvo-ER-Polytechnical-2.4.2/ER-Polytechnical.ifo
+stardict-lingvo-ER-Computer-2.4.2/ER-Computer.dict
