переименовал ...ys.cpp в ...y.cpp

--- a/Dictionarys.vcxproj
+++ b/Dictionarys.vcxproj
@@ -134,7 +134,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dictionarys.cpp" />
+    <ClCompile Include="dictionary.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
