--- a/Dictionarys.vcxproj.filters
+++ b/Dictionarys.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="dictionary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="debug\moc_dictProgram.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="debug\moc_dictionarys.cpp">
@@ -76,6 +79,9 @@
       <Filter>Form Files</Filter>
     </CustomBuild>
     <CustomBuild Include="dictionary.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="DictProgram.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
